# phlex

./: .gersemirc  .markdownlint.jsonc  CLANG_TIDY_CONFIGURATION.md  CMakeLists.txt  README.md  pyproject.toml
.github/: CodeQL-README.md  REUSABLE_WORKFLOWS.md  actionlint.yaml  copilot-instructions.md
.github/actions/: README.md
.github/actions/build-cmake/: action.yaml
.github/actions/configure-cmake/: action.yaml
.github/actions/detect-act-env/: action.yaml
.github/actions/detect-relevant-changes/: action.yaml
.github/actions/generate-build-matrix/: action.yml  generate_matrix.py
.github/actions/get-pr-info/: action.yml
.github/workflows/: actionlint-check.yaml  clang-format-check.yaml  clang-format-fix.yaml  clang-tidy-check.yaml  clang-tidy-fix.yaml  cmake-build.yaml  cmake-format-check.yaml  cmake-format-fix.yaml  codeql-analysis.yaml  coverage.yaml  gcc-analyzer-check.yaml  jsonnet-format-check.yaml  jsonnet-format-fix.yaml  markdown-check.yaml  markdown-fix.yaml  python-check.yaml  python-fix.yaml
form/persistence/: ipersistence.hpp  persistence.hpp
phlex/app/: phlex.cpp  run.cpp
phlex/core/: declared_output.cpp  declared_unfold.cpp  framework_graph.cpp
phlex/core/dot/: attributes.cpp  data_graph.cpp  function_graph.cpp
phlex/model/: product_store.cpp  products.cpp
plugins/python/: CMakeLists.txt
plugins/python/src/: modulewrap.cpp
scripts/: README.md  check_codeql_alerts.py  codeql_reset_dismissed_alerts.py  coverage.sh  create_coverage_symlinks.py  export_llvm_lcov.py  normalize_coverage_xml.py  sarif-alerts.py
test/: allowed_families.cpp  cached_execution.cpp  class_registration.cpp  different_hierarchies.cpp  filter.cpp  fold.cpp  function_registration.cpp  hierarchical_nodes.cpp  multiple_function_registration.cpp  product_handle.cpp  product_store.cpp  unfold.cpp  vector_of_abstract_types.cpp
test/benchmarks/: last_index.cpp  plus_101.cpp  plus_one.cpp
test/demo-giantdata/: unfold_transform_fold.cpp
test/memory-checks/: many_events.cpp
test/plugins/: module.cpp
test/python/: CMakeLists.txt  adder.py  all_config.py  pyphlex.py  reducer.py  registry.py  sumit.py  test_phlex.py  verify.py
